# cv_cpp_exps

./: AI3DProject_VS2019_x64.bat  CMakeLists.txt  README.md  readme.txt
CMakeModules/CMake/: CMakeExternalLibs.cmake  Prequisite.cmake  ThirdpartyPathList.cmake
CPP_Demos/: CMakeLists.txt
CPP_Demos/Boost_Demos/: CMakeLists.txt  file_system_demos.cpp  file_system_demos.h  main.cpp
CPP_Demos/CPP_Advanced/: CMakeLists.txt  ScopeGuard.h  main.cpp
CPP_Demos/CPP_Basic/: CMakeLists.txt  interview.h  main.cpp  pair.cpp  pair.h
CPP_Demos/DS_Demos/: CMakeLists.txt  main.cpp
CPP_Demos/Math_Demos/: CMakeLists.txt  main.cpp
CPP_Demos/STL_Demos/: CMakeLists.txt  main.cpp  vector_demo.cpp  vector_demo.h
CPP_Demos/String_Operations/: CMakeLists.txt  Trim.cpp  Trim.h  main.cpp
CPP_Demos/Templates_Demos/: CMakeLists.txt  main.cpp
CV_Demos/: CMakeLists.txt
CV_Demos/Demos1/: CMakeLists.txt
CV_Demos/Demos2/: CMakeLists.txt
CV_Demos/Opencv_Basic/: CMakeLists.txt  blog_demo2.cpp  blog_demo2.h  blog_demo3.cpp  blog_demo3.h  blog_demo4.cpp  blog_demo4.h  blog_demo5.cpp  blog_demo5.h  blog_demo6.cpp  blog_demo6.h  blog_demo7.cpp  blog_demo7.h  blur.cpp  blur.h  feature_detection_demos.cpp  feature_detection_demos.h  feature_extraction_matching.cpp  feature_extraction_matching.h  feature_keypoint_scale.cpp  feature_keypoint_scale.h  feature_matching.cpp  feature_matching.h  hog_test.cpp  hog_test.h  main.cpp  perspectiveTransformDemo.cpp  perspectiveTransformDemo.h  roi_demo.cpp  roi_demo.h  video_frame_extraction.cpp  video_frame_extraction.h
Include/: Config.h  Constants.h
Include/Merge/: FindBoundary.h  Merge.h
Include/MeshBase/: GenericTree.h  Material.h  MeshBase.h  Segmenter.h
Include/OpenMesh/: MyHalfEdge.h
Include/SampleDLL/: Sample.h
Include/Simplifier/: Example.h  IndexArrayHandler.h  MathBase.h  Matrix4x4.h  OBJReader.cpp  OBJReader.h  Plane.h  Simplifier.h  Vector3D.h  Vector4D.h
Include/SimplifyDLL/: Simplify.h
Src/: CMakeLists.txt
Src/Merge/: CMakeLists.txt  FindBoundary.cpp  Merge.cpp
Src/MeshBase/: CMakeLists.txt  GenericTree.cpp  MeshBase.cpp  MeshSegmenter.7z  Segmenter.cpp
Src/Openmesh/: CMakeLists.txt  MyHalfEdge.cpp  smooth.cpp
Src/SampleDLL/: CMakeLists.txt  SampleDLL.cpp
Src/Simplifier/: CMakeLists.txt  Example.cpp  Matrix4x4.cpp  OBJReader.cpp  Plane.cpp  Simplifier.cpp  SimplygonLoader.cpp  SimplygonSDKLoader.cpp_
Src/SimplifyDLL/: CMakeLists.txt  SimplifyDLL.cpp
Test/: CMakeLists.txt
Test/TileNodeSegmentation/: CMakeLists.txt  TileNodeSegmentation.cpp  TileNodeSegmentation.h  main.cpp
Test/testCFG/: CMakeLists.txt  cfg.cpp  sample.cfg  temp.txt
Test/testHQW/: CMakeLists.txt  testMeshIO.cpp
Test/testManyFun/: CMakeLists.txt  ManyFun.cpp  fun1.cpp  fun1.h
Test/testSimplygon/: CMakeLists.txt  testSimplygon.cpp
