
if(EXISTS  ${CMAKE_CURRENT_SOURCE_DIR}/Templates_Demos)
	add_subdirectory(Templates_Demos)
endif()


if(EXISTS  ${CMAKE_CURRENT_SOURCE_DIR}/STL_Demos)
	add_subdirectory(STL_Demos)
endif()


if(EXISTS  ${CMAKE_CURRENT_SOURCE_DIR}/CPP_Advanced)
	add_subdirectory(CPP_Advanced)
endif()

if(EXISTS  ${CMAKE_CURRENT_SOURCE_DIR}/CPP_Basic)
	add_subdirectory(CPP_Basic)
endif()


if(EXISTS  ${CMAKE_CURRENT_SOURCE_DIR}/Boost_Demos)
	add_subdirectory(Boost_Demos)
endif()

if(EXISTS  ${CMAKE_CURRENT_SOURCE_DIR}/Math_Demos)
	add_subdirectory(Math_Demos)
endif()

if(EXISTS  ${CMAKE_CURRENT_SOURCE_DIR}/DS_Demos)
	add_subdirectory(DS_Demos)
endif()

if(EXISTS  ${CMAKE_CURRENT_SOURCE_DIR}/String_Operations)
	add_subdirectory(String_Operations)
endif()






